pari/static/css/base.less
@import "common.less";

#holder {

    overflow-x: hidden;

    .navbar {
        @navBottomBorder: #808080;
        background: @navColor;
        border:0px;
        border-bottom: 2px solid @navBottomBorder;
        min-height: 60px;
        
        .brand {
            position: relative;
            font-size: 31px;
            text-shadow: none;
            @media (min-width: 979px) {
                &.active {
                    .menu-arrow (@navBottomBorder);
                }
            }
        }

        .nav {
            li {
                a {
                    text-shadow: none;
                    &:hover {
                        color: #fff;
                    }
                }
                &.dropdown.active {
                    a {
                        @media (min-width: 979px) {
                            background-color: @navColor !important;
                            -webkit-box-shadow: 0 0 0 @navColor !important;
                            box-shadow: 0 0 0 @navColor !important;
                            .menu-arrow (@navBottomBorder);
                        }
                    }
                }
            }
        }

        .navbar-inner {
            background: @navColor;
            border:0px;
            box-shadow: none;
            width:1170px;
            margin:0px auto;

            .container {
                margin-top: 10px;
            }
        }

        .navbar-search {
            position: relative;
            top: 27px;
            .search-query {
                width: 289px;
                padding-right: 29px !important;
            }
            .icon-search {
                position: absolute;
                top: 7px;
                right: 10px;
                color: @headingsColor;
            }
        }
    }
}

.paginator {

    text-align: center;
    
    ul {

        display: inline-block;

        li {
            display: inline;

            a {
                float: left;
                color: @headingsColor;
                font-size: 17.5px;
                padding: 11px 19px;
                border: 1px solid #dddddd;
                margin: 4px;
                text-decoration: none;

            }

            &.active {
                a {
                    color: black;
                    border: none;
                    cursor: default;
                }
            }

            &.page-nav {
                a {
                    border: none;
                    font-size: 24px;
                    padding: 11px 0 11px 0;
                    margin: 0 12px 0 12px;

                }
            }

        }
    }    
}

#push {
        height: 60px;
}

#footer {
    height: 60px;
    background-color: @navColor;
    .row {
        text-align: center;
    }
    .footer-nav {
        display: inline-block;
        li {
            float: left;
            list-style: none;
            margin: 0 0.3em 0 0;
            padding: 0.2em;
            font-size: 1.1em;
            color: @headingsColor;
            a {
                color: @headingsColor;
            }
        }
    }
}

